# picopico-phone

./: .gitignore  Cargo.toml  README.md  rp235x_riscv.x
.cargo/: config.toml
.zed/: debug.json  settings.json
docs/: PINOUT.md
prints/receiver/: .gitignore  receiver.stl
prints/receiver/src/: enclosure.kcl  enclosure_lid.kcl  hex.kcl  main.kcl
src/: i2s.rs  lib.rs  main.rs  music.rs  net.rs
