[package]
name = "picopico-phone"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"

embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
defmt-rtt = "0.4"
panic-probe = { version = "0.3" }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.8.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
cyw43-pio = "0.8.0"
defmt = "1.0.1"
cyw43 = "0.5.0"
static_cell = "2.1.1"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embassy-net = { version = "0.7.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
heapless = "0.8"
