[package]
name = "picopico-phone"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"

defmt-rtt = "0.4"
panic-probe = { version = "0.3" }
defmt = "1.0.1"
static_cell = "2.1.1"
heapless = "0.8"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

cyw43 = "0.7.0"
cyw43-pio = "0.10.0"
embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.5.1" }
embassy-rp = { version = "0.10.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
embassy-net = { version = "0.9.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-sync = "0.8.0"
